# build-online

./: .gitignore  CMakeLists.txt  Readme.md  test.py  test_vcpkg.yml  vcpkg.json
.github/workflows/: build-simple.yml  build-windows.yml  test_vcpkg_install.yml
src/: main.cpp
